# generator-example

./: Cargo.toml  Dockerfile  README.md
crate_template/tests/: area.rs
src/: main.rs
